@@ -6,6 +6,7 @@
  */
 package com.powsybl.openloadflow.network.impl;
 
+import com.google.common.collect.Sets;
 import com.powsybl.commons.PowsyblException;
 import com.powsybl.contingency.Contingency;
 import com.powsybl.contingency.ContingencyElement;
@@ -373,6 +374,10 @@ public class PropagatedContingency {
                 && loadIdsToLoose.isEmpty() && shuntIdsToShift.isEmpty() && busIdsToLose.isEmpty();
     }
 
+    private static boolean isIsolatedBus(GraphConnectivity<LfBus, LfBranch> connectivity, LfNetwork network, LfBus bus) {
+        return connectivity.getConnectedComponent(bus).size() < Math.round(1d * network.getBuses().size() / 3);
+    }
+
     private Map<LfBranch, DisabledBranchStatus> findBranchToOpenDirectlyImpactedByContingency(LfNetwork network) {
         // we add the branches connected to buses to lose.
         Map<LfBranch, DisabledBranchStatus> branchesToOpen = branchIdsToOpen.entrySet().stream()
@@ -383,16 +388,10 @@ public class PropagatedContingency {
         busIdsToLose.stream().map(network::getBusById)
                 .filter(Objects::nonNull)
                 .forEach(bus -> {
-                    if (bus.isSlack()) {
-                        // slack bus disabling is not supported
-                        // we keep the slack bus enabled and the connected lostBranches
-                        LOGGER.error("Contingency '{}' leads to the loss of a slack bus: slack bus kept", bus.getId());
-                    } else {
-                        bus.getBranches().forEach(branch -> {
-                            DisabledBranchStatus status = branch.getBus1() == bus ? DisabledBranchStatus.SIDE_1 : DisabledBranchStatus.SIDE_2;
-                            addBranchToOpen(branch, status, branchesToOpen);
-                        });
-                    }
+                    bus.getBranches().forEach(branch -> {
+                        DisabledBranchStatus status = branch.getBus1() == bus ? DisabledBranchStatus.SIDE_1 : DisabledBranchStatus.SIDE_2;
+                        addBranchToOpen(branch, status, branchesToOpen);
+                    });
                 });
 
         return branchesToOpen;
@@ -410,12 +409,15 @@ public class PropagatedContingency {
                     .filter(LfBranch::isConnectedAtBothSides)
                     .forEach(connectivity::removeEdge);
 
-            if (connectivity.getConnectedComponent(network.getSlackBus()).size() == 1) {
-                // FIXME
-                // If a contingency leads to an isolated slack bus, this bus is considered as the main component.
-                // In that case, we have an issue with a different number of variables and equations.
-                LOGGER.error("Contingency '{}' leads to an isolated slack bus: not supported", contingency.getId());
-                return new ContingencyConnectivityLossImpact(false, 0, Collections.emptySet());
+            if (isIsolatedBus(connectivity, network, network.getSlackBus())) {
+                LOGGER.warn("Contingency '{}' leads to an isolated slack bus: relocate slack bus inside main component",
+                        contingency.getId());
+                // if a contingency leads to an isolated slack bus, we need to relocate the slack bus
+                // we select a new slack bus excluding buses from isolated component
+                Set<LfBus> excludedBuses = Sets.difference(Set.copyOf(network.getBuses()), connectivity.getVerticesRemovedFromMainComponent());
+                network.setExcludedSlackBuses(excludedBuses);
+                // reverse main component to the one containing the relocated slack bus
+                connectivity.setMainComponentVertex(network.getSlackBus());
             }
 
             // add to contingency description buses and branches that won't be part of the main connected
